--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -12,14 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>Questions - Set the index for all the df?</li>\n",
-    "<li>Remove extraneous cells </li>\n",
-    "<li>show player count as DF? or is a print list ok? </li>"
+    "<font color=\"red\"><b>\n",
+    "    <li>Remove extraneous cells </li></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +122,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,11 +139,7 @@
     "purchase_data = pd.read_csv(file_to_load)\n",
     "\n",
     "# See what the data looks like\n",
-    "purchase_data.head()\n",
-    "# purchase_data.count()\n",
-    "# purchase_data.describe()\n",
-    "# list(purchase_data.columns)\n",
-    "# purchase_data.dtypes"
+    "purchase_data.head()\n"
    ]
   },
   {
@@ -152,36 +147,6 @@
    "metadata": {},
    "source": [
     "## Player Count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SN        576\n",
-       "Age       576\n",
-       "Gender    576\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Create a data frame for unique players info (minus purchases)\n",
-    "df_players = pd.DataFrame(purchase_data[[\"SN\", \"Age\", \"Gender\"]])\n",
-    "df_unique_players = df_players.drop_duplicates(subset = \"SN\", keep = 'first')\n",
-    "\n",
-    "#double check df_unique_players.count() with total player count \n",
-    "#with purchase_data['SN']unique() in next cell\n",
-    "#show results\n",
-    "df_unique_players.count()"
    ]
   },
   {
@@ -197,22 +162,59 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total Players:  576\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>576</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Players\n",
+       "0            576"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "#Create a data frame for unique players info (minus purchases)\n",
+    "df_players = pd.DataFrame(purchase_data[[\"SN\", \"Age\", \"Gender\"]])\n",
+    "df_unique_players = df_players.drop_duplicates(subset = \"SN\", keep = 'first')\n",
+    "\n",
     "#total number of unique players\n",
     "total_players = len(purchase_data['SN'].unique())\n",
-    "total_players\n",
     "\n",
-    "#double check purchase_data['SN']unique() with\n",
-    "#df_unique_players.count() in previous cell\n",
     "#show results\n",
-    "print (\"Total Players: \", total_players)"
+    "df_totalplayers = pd.DataFrame({\"Total Players\" : [total_players]})\n",
+    "df_totalplayers"
    ]
   },
   {
@@ -446,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -507,19 +509,19 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vcount_gender = df_unique_players[\"Gender\"].value_counts()\n",
-    "df_gender_summary = vcount_gender.rename_axis(\"Gender\").to_frame('Total Count')\n",
-    "#note: total_players is defined in cell within \"Player Count\"\n",
+    "#calculate gender demographics\n",
+    "count_bygender = df_unique_players[\"Gender\"].value_counts()\n",
+    "df_gender_summary = count_bygender.rename_axis(\"Gender\").to_frame('Total Count')\n",
     "df_gender_summary [\"Percentage of Players\"] = (df_gender_summary[\"Total Count\"] / total_players).map('{:.2%}'.format)\n",
     "\n",
     "#show DataFrame\n",
-    "df_gender_summary\n"
+    "df_gender_summary"
    ]
   },
   {
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -691,22 +693,23 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#calculate gender purchasing analysis; perform groupby operations\n",
     "groupby_gender = purchase_data.groupby(['Gender'])\n",
-    "\n",
     "purchase_count_bygender = groupby_gender[\"Price\"].count()\n",
     "average_purchase_bygender = groupby_gender[\"Price\"].mean()\n",
     "total_value_bygender = groupby_gender[\"Price\"].sum()\n",
     "\n",
-    "# Creating a new DataFrame\n",
+    "# creating a new DataFrame\n",
     "df_gender_purchasing = pd.DataFrame({\"Purchase Count\": purchase_count_bygender,\n",
     "                                           \"Average Purchase Price\": average_purchase_bygender,\n",
     "                                           \"Total Purchase Value\": total_value_bygender})\n",
+    "\n",
     "#Transforming DataFrame\n",
     "df_gender_purchasing = pd.merge (df_gender_purchasing, df_gender_summary, on = \"Gender\")\n",
     "df_gender_purchasing [\"Avg Total Purchase per Person\"] = df_gender_purchasing [\"Total Purchase Value\"] / df_gender_purchasing [\"Total Count\"]\n",
@@ -716,7 +719,9 @@
     "df_gender_purchasing[\"Average Purchase Price\"] = df_gender_purchasing[\"Average Purchase Price\"].map('${:,.2f}'.format)\n",
     "df_gender_purchasing[\"Total Purchase Value\"] = df_gender_purchasing[\"Total Purchase Value\"].map('${:,.2f}'.format)\n",
     "df_gender_purchasing[\"Avg Total Purchase per Person\"] = df_gender_purchasing[\"Avg Total Purchase per Person\"].map('${:,.2f}'.format)\n",
-    "df_gender_purchasing.head()"
+    "\n",
+    "#show DataFrame\n",
+    "df_gender_purchasing"
    ]
   },
   {
@@ -836,19 +841,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\heain\\AppData\\Local\\Continuum\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\heain\\AppData\\Local\\Continuum\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  if sys.path[0] == '':\n"
+      "  # Remove the CWD from sys.path while we load stuff.\n"
      ]
     },
     {
@@ -939,16 +944,14 @@
        "40+                 12                 2.08%"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create bins \n",
+    "# Create bins and names\n",
     "bins_age = [0, 9, 14, 19, 24, 29, 34, 39, np.inf]\n",
-    "\n",
-    "# Create the names for the bins\n",
     "age_bin_names = [\"<10\", \"10-14\", \"15-19\", \"20-24\", \"25-29\", \"30-34\", \"35-39\", \"40+\"]\n",
     "\n",
     "#slice data into bins for unique_players DataFrame\n",
@@ -963,9 +966,9 @@
     "\n",
     "#create new data frame\n",
     "df_age_summary = age_vcount_unique.rename_axis(\"Age Group\").to_frame('Total Count')\n",
-    "#note: total_players is defined in cell within \"Player Count\"\n",
     "df_age_summary [\"Percentage of Players\"] = (df_age_summary[\"Total Count\"] / total_players).map('{:.2%}'.format)\n",
     "\n",
+    "#sort values\n",
     "df_age_summary = df_age_summary.sort_values(\"Age Group\")\n",
     "\n",
     "#show DataFrame\n",
@@ -1094,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1219,7 @@
        "40+                               $3.19  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,9 +1232,8 @@
     "df_age_purchase = purchase_data\n",
     "df_age_purchase[\"Age Group\"] = slice_age_purchase\n",
     "\n",
-    "#start groupby analysis\n",
+    "#calculate age group purchasing analysis; perform groupby operations\n",
     "groupby_age = df_age_purchase.groupby(['Age Group'])\n",
-    "\n",
     "purchase_count_byagegroup = groupby_age[\"Price\"].count()\n",
     "average_purchase_byagegroup = groupby_age[\"Price\"].mean()\n",
     "total_value_byagegroup = groupby_age[\"Price\"].sum()\n",
@@ -1240,15 +1242,18 @@
     "df_age_purchasing = pd.DataFrame({\"Purchase Count\": purchase_count_byagegroup,\n",
     "                                  \"Average Purchase Price\": average_purchase_byagegroup,\n",
     "                                  \"Total Purchase Value\": total_value_byagegroup})\n",
+    "\n",
     "#Transforming DataFrame\n",
     "df_age_purchasing = pd.merge (df_age_purchasing, df_age_summary, on = \"Age Group\")\n",
     "df_age_purchasing [\"Avg Total Purchase per Person\"] = df_age_purchasing [\"Total Purchase Value\"] / df_age_purchasing [\"Total Count\"]\n",
     "df_age_purchasing = df_age_purchasing [[\"Purchase Count\", \"Average Purchase Price\", \"Total Purchase Value\", \"Avg Total Purchase per Person\"]]\n",
     "\n",
-    "# #cleaner formatting\n",
+    "#cleaner formatting\n",
     "df_age_purchasing[\"Average Purchase Price\"] = df_age_purchasing[\"Average Purchase Price\"].map('${:,.2f}'.format)\n",
     "df_age_purchasing[\"Total Purchase Value\"] = df_age_purchasing[\"Total Purchase Value\"].map('${:,.2f}'.format)\n",
     "df_age_purchasing[\"Avg Total Purchase per Person\"] = df_age_purchasing[\"Avg Total Purchase per Person\"].map('${:,.2f}'.format)\n",
+    "\n",
+    "#show DataFrame\n",
     "df_age_purchasing"
    ]
   },
@@ -1412,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1492,14 +1497,14 @@
        "Iskadarya95               3                  $4.37               $13.10"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#calculate user purchasing analysis; perform groupby operations\n",
     "groupby_sn = purchase_data.groupby(['SN'])\n",
-    "\n",
     "purchase_count_bysn = groupby_sn[\"Price\"].count()\n",
     "average_purchase_bysn = groupby_sn[\"Price\"].mean()\n",
     "total_value_bysn = groupby_sn[\"Price\"].sum()\n",
@@ -1516,6 +1521,7 @@
     "df_top_spender[\"Average Purchase Price\"] = df_top_spender[\"Average Purchase Price\"].map('${:,.2f}'.format)\n",
     "df_top_spender[\"Total Purchase Value\"] = df_top_spender[\"Total Purchase Value\"].map('${:,.2f}'.format)\n",
     "\n",
+    "#show DataFrame\n",
     "df_top_spender.head()\n"
    ]
   },
@@ -1640,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1743,14 +1749,14 @@
        "19      Pursuit, Cudgel of Necromancy                               $8.16  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#calculate item analysis; perform groupby operations\n",
     "groupby_item = purchase_data.groupby(['Item ID', 'Item Name'])\n",
-    "\n",
     "purchase_count_byitem = groupby_item[\"Price\"].count()\n",
     "price_of_item = groupby_item[\"Price\"].mean()\n",
     "total_value_byitem = groupby_item[\"Price\"].sum()\n",
@@ -1767,6 +1773,7 @@
     "df_popular_item[\"Item Price\"] = df_popular_item[\"Item Price\"].map('${:,.2f}'.format)\n",
     "df_popular_item[\"Total Purchase Value\"] = df_popular_item[\"Total Purchase Value\"].map('${:,.2f}'.format)\n",
     "\n",
+    "#show DataFrame\n",
     "df_popular_item.head()"
    ]
   },
@@ -1905,7 +1912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2015,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2021,6 +2028,7 @@
     "df_profitable_item[\"Item Price\"] = df_profitable_item[\"Item Price\"].map('${:,.2f}'.format)\n",
     "df_profitable_item[\"Total Purchase Value\"] = df_profitable_item[\"Total Purchase Value\"].map('${:,.2f}'.format)\n",
     "\n",
+    "#show DataFrame\n",
     "df_profitable_item.head()"
    ]
   },
@@ -2159,7 +2167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
