--- a/HeroesOfPymoli/HeroesOfPymoli_HY.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_HY.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Note\n",
-    "* Instructions have been included for each segment. You do not have to follow them exactly, but they are included to help you think through the steps."
+    "# Observable trends based on the data\n",
+    "\n",
+    "1. Largest age group of the game is 20-24 (258 players), and it is also the group with greatest amount in item purchases (\\\\$1,114.06). However, age group 35-39 are the \"biggest spenders,\" with the per-player spending of \\\\$4.76, compared to \\\\$4.32 per-player spending of the 20-24 age group.\n",
+    "2. Largest gender group of the game is \"Male\" (484 players), and it is also the group with greatest amount in item purchases (\\\\$1,967.64). However, other/non-disclosed are the \"biggest spenders,\" with the per-player spending of \\\\$4.56, compared to \\\\$4.07 per-player spending of males.\n",
+    "3. The most popular item is \"Oathbreaker, Last Hope of the Breaking Storm,\" with 12 purchases, and it is also the most profitable item (\\\\$50.76). But it is a small portion (approximately 1.5\\%) of the game's total number of purchases, which is 780."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +117,7 @@
        "4                                       Fury   1.44  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,6 +126,9 @@
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
     "file_to_load = \"Resources/purchase_data.csv\"\n",
@@ -578,18 +584,6 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\heain\\AppData\\Local\\Continuum\\anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:10: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1347,24 +1341,7 @@
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Written description of three observable trends based on the data.\n",
-    "# --------------------------------------------------------------------------------\n",
-    "\n",
-    "# 1. Largest age group of the game is 20-24 (258 players), \n",
-    "#    and it is also the group with greatest amount in item purchases ($1,114.06).\n",
-    "#    However, age group 35-39 are the \"biggest spenders,\" with the per-player spending of $4.76, \n",
-    "#    compared to $4.32 per-player spending of the 20-24 age group.\n",
-    "\n",
-    "# 2. Largest gender group of the game is \"Male\" (484 players), \n",
-    "#    and it is also the group with greatest amount in item purchases ($1,967.64).\n",
-    "#    However, other/non-disclosed are the \"biggest spenders,\" with the per-player spending of $4.56, \n",
-    "#    compared to $4.07 per-player spending of males.\n",
-    "\n",
-    "# 3. The most popular item is \"Oathbreaker, Last Hope of the Breaking Storm,\" with 12 purchases, \n",
-    "#    and it is also the most profitable item ($50.76).\n",
-    "#    But it is a small portion (approximately 1.5%) of the game's total number of purchases, which is 780."
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -1387,7 +1364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
